--- a/src/force-app/main/default/classes/OrderSelector.cls
+++ b/src/force-app/main/default/classes/OrderSelector.cls
@@ -1,8 +1,9 @@
 public with sharing class OrderSelector {
     
     public static List<Order> selectOrdersByAccountId(Id accountId) {
-        return [SELECT Id, Name, OrderNumber, Status, TotalAmount
+        return [SELECT OrderNumber, Status, TotalAmount, EffectiveDate
                 FROM Order
                 WHERE AccountId = :accountId];
     }
+
 }
